--- a/index.html
+++ b/index.html
@@ -6,18 +6,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Team</title>
     <link rel="stylesheet" href="./css/app.css">
+    <!-- PERDONATEMI, HO USATO BOOSTRAP PER COMODITA' -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
 </head>
 <body>
     <header class="pageHeader">
-
+        <h1>OUR TEAM</h1>
+        <p class="pHeaderPage">
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Totam reiciendis eos excepturi architecto non ipsum nemo voluptates optio necessitatibus ab veniam odit fuga, soluta fugit quasi placeat esse quisquam quibusdam atque! Quo nobis repellendus officia et temporibus incidunt, debitis autem.
+        </p>
     </header>
 
     <main>
         <section class="mainSection">
-
+            <div class="container">
+                <div class="row my-1">
+                    <div class="col">Colonna 1</div>
+                    <div class="col mx-3">Colonna 2</div>
+                    <div class="col">Colonna 3</div>
+                </div>
+                <div class="row my-3">
+                    <div class="col">Colonna 4</div>
+                    <div class="col mx-3">Colonna 5</div>
+                    <div class="col">Colonna 6</div>
+                </div>                                
+            </div>
         </section>
     </main>
 
     <script src="./js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
