--- a/index.html
+++ b/index.html
@@ -20,20 +20,13 @@
 
     <main>
         <section class="mainSection">
-            <div class="container">
-                <div class="row my-1">
-                    <div class="col">Colonna 1</div>
-                    <div class="col mx-3">Colonna 2</div>
-                    <div class="col">Colonna 3</div>
-                </div>
-                <div class="row my-3">
-                    <div class="col">Colonna 4</div>
-                    <div class="col mx-3">Colonna 5</div>
-                    <div class="col">Colonna 6</div>
-                </div>                                
+          <div class="container">
+            <div class="row" id="team-members">
             </div>
+          </div>
         </section>
-    </main>
+      </main>
+      
 
     <script src="./js/app.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
