--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
 </head>
-<body>
+<body class="bg-lightGrey">
     <header class="pageHeader">
         <h1>OUR TEAM</h1>
         <p class="pHeaderPage">
@@ -21,7 +21,7 @@
     <main>
         <section class="mainSection">
           <div class="container">
-            <div class="row" id="team-members">
+            <div class="row align-items-center" id="team-members">
             </div>
           </div>
         </section>
